--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -1,18 +1,4 @@
 VARIABLE,COMMENTS, en, fr
-MSG_CHECK_VARSTAT_DEBUG_FAIL,"Checkings.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_DEBUG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_DEBUG est incorrecte.
-MSG_CHECK_VARSTAT_LOG_FAIL,"Checkings.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_LOG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG est incorrecte.
-MSG_CHECK_VARSTAT_LOGREDIRECT_FAIL,"Checkings.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_LOG_REDIRECT variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG_REDIRECT est incorrecte.
-MSG_CHECK_VARSTAT_TIMELINE_NAN,"Checkings.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_TIME_LINE variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TIME_LINE n’est pas un nombre.
-MSG_CHECK_VARSTAT_TIMETXT_NAN,"Checkings.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_TIME_TXT variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TXT n’est pas un nombre.
-,,,
-MSG_CHECK_ROOTEUID_FAIL,"Checkings.lib → ""CheckRootEUID"" function",,
-,,,
-MSG_CHECK_LOG_PATH_FAIL,"Checkings.lib → ""CheckProjectLogPath"" function",Error : no path provided into the PROJECT_LOG_PATH variable.,
-,,,
-MSG_CHECK_LOG_STATUS_FAIL_LOCATION,"Checkings.lib → ""CheckProjectLogStatus"" function","In ${BASH_UTILS[0]}, line $(Decho ""$LINENO"") →","Dans le fichier ${BASH_SOURCE[0]}, à la ligne $LINENO →"
-MSG_CHECK_LOG_STATUS,"Checkings.lib → ""CheckProjectLogStatus"" function",,
-MSG_CHECK_LOG_STATUS_INVALID,"Checkings.lib → ""CheckProjectLogStatus"" function",Error : no valid write output mode defined in the PROJECT_STATUS_LOG variable,Erreur : aucun mode d’écriture défini dans la variable PROJECT_STATUS_LOG
-,,,
 MSG_DIR_PROCESSING_BEGIN,Directories.lib,"Processing the $(DechoN ""$name"") folder in the parent folder $(DechoN ""$parent"").","Traitement du dossier $(DechoN ""$name"") dans le dossier parent $(DechoN ""$parent/"")."
 MSG_DIR_PROCESSING_END_FAIL,Directories.lib,"End of processing the $(DechoE ""$path/"") folder.","Fin du traitement du dossier $(DechoE ""$path/"")."
 MSG_DIR_PROCESSING_END_SUCCESS,Directories.lib,"End of processing the $(DechoS ""$path/"") folder.","Fin du traitement du dossier $(DechoS ""$path/"")."
@@ -41,18 +27,48 @@ MSG_FILE_MKFILE_SUCCESS,"Files.lib → ""Makefile"" function",,"Le fichier $(Dec
 MSG_FILE_MKFILE_FAIL,"Files.lib → ""Makefile"" function",,"LE FICHIER $(DechoE ""$name"") N'A PAS PU ÊTRE CRÉÉ DANS LE DOSSIER $(DechoE ""$parent/"")"
 MSG_FILE_MKFILE_EMPTY,"Files.lib → ""Makefile"" function",,"Le fichier $(DechoS ""$name"") existe déjà dans le dossier $(DechoS ""$parent/"")"
 ,,,
-MSG_HEADERS_HNDERR_ERROR,"Headers.lib → ""HandleErrors"" function",FATAL ERROR,ERREUR FATALE
-MSG_HEADERS_HNDERR_TYPE,"Headers.lib → ""HandleErrors"" function",A fatal error occured,Une erreur fatale s'est produite
-MSG_HEADERS_HNDERR_LINE,"Headers.lib → ""HandleErrors"" function",The error in question occurred in the line,L’erreur en question s'est produite à la ligne
-MSG_HEADERS_HNDERR_STOP,"Headers.lib → ""HandleErrors"" function",,"Arrêt de l’exécution du script $(basename ""$0"")."
+MSG_HANDLES_VARSTAT_DEBUG_FAIL,"Handles.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_DEBUG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_DEBUG est incorrecte.
+MSG_HANDLES_VARSTAT_LOG_FAIL,"Handles.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_LOG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG est incorrecte.
+MSG_HANDLES_VARSTAT_LOGREDIRECT_FAIL,"Handles.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_LOG_REDIRECT variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG_REDIRECT est incorrecte.
+MSG_HANDLES_VARSTAT_TIMELINE_NAN,"Handles.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_TIME_LINE variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TIME_LINE n’est pas un nombre.
+MSG_HANDLES_VARSTAT_TIMETXT_NAN,"Handles.lib → ""CheckVarStatus"" function",Error : PROJECT_STATUS_TIME_TXT variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TXT n’est pas un nombre.
 ,,,
-MSG_PERMISSIONS_CHOWNREC,"Permissions.lib → ""ChownRec"" function","Recursive change of the ownership rights of the new folder $(DechoN ""$path/"") from $(DechoN ""$current_owner"") to $(DechoN ""$new_owner"")","Transfert récursif des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")"
-MSG_PERMISSIONS_CHOWNREC_SUCCESS,"Permissions.lib → ""ChownRec"" function","The rights of the $(DechoS ""$name"") folder have been successfully changed from $(DechoS ""$current_owner"") to $(DechoS ""$new_owner"")","Les droits de propriété du dossier $(DechoS ""$name"") ont été transférées de $(DechoS ""$current_owner"") à $(DechoS ""$new_owner"") avec succès"
-MSG_PERMISSIONS_CHOWNREC_FAIL,"Permissions.lib → ""ChownRec"" function","Unable to change the rights of the $(DechoE ""$path/"") folder","Impossible de transférer la propriété les droits du dossier $(DechoE ""$path/"") de $(DechoE ""$current_owner"") à $(DechoE ""$new_owner"")"
-MSG_PERMISSIONS_CHOWNREC_FAIL_ADVICE,"Permissions.lib → ""ChownRec"" function","Please use the following command to change ownership recursively,","Pour transférer récursivement la propriété du dossier $(DechoE ""$path/"") de manière récursive, utilisez la commande suivante"
+MSG_HANDLES_ROOTEUID_FAIL,"Handles.lib → ""CheckRootEUID"" function",,
 ,,,
-MSG_PERMISSIONS_CHOWN_PROCESSING_DIR,"Permissions.lib → ""Chown"" function",,"Transfert des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
-MSG_PERMISSIONS_CHOWN_PROCESSING_FILE,"Permissions.lib → ""Chown"" function",,"Transfert des droits de propriété du fichier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
-MSG_PERMISSIONS_CHOWN_SUCCESS,"Permissions.lib → ""Chown"" function",,"Les droits du fichier $(DechoS ""$parent"") ont été changés avec succès."
-MSG_PERMISSIONS_CHOWN_FAIL,"Permissions.lib → ""Chown"" function",,"Impossible de changer les droits du fichier $(DechoE ""$path"")."
-MSG_PERMISSIONS_CHOWN_FAIL_ADVICE,"Permissions.lib → ""Chown"" function",,"Utilisez la commande suivante pour changer les droits de propriété du fichier $(DechoE ""$path"")."
+MSG_HANDLES_LOG_PATH_FAIL,"Handles.lib → ""CheckProjectLogPath"" function",Error : no path provided into the PROJECT_LOG_PATH variable.,
+,,,
+MSG_HANDLES_LOG_STATUS_FAIL_LOCATION,"Handles.lib → ""CheckProjectLogStatus"" function","In ${BASH_UTILS[0]}, line $(Decho ""$LINENO"") →","Dans le fichier ${BASH_SOURCE[0]}, à la ligne $LINENO →"
+MSG_HANDLES_LOG_STATUS,"Handles.lib → ""CheckProjectLogStatus"" function",,
+MSG_HANDLES_LOG_STATUS_INVALID,"Handles.lib → ""CheckProjectLogStatus"" function",Error : no valid write output mode defined in the PROJECT_STATUS_LOG variable,Erreur : aucun mode d’écriture défini dans la variable PROJECT_STATUS_LOG
+,,,
+MSG_HANDLES_ERR_FATAL_ERROR,"Headers.lib → ""HandleErrors"" function", FATAL ERROR,ERREUR FATALE
+MSG_HANDLES_ERR_FATAL_TYPE,"Headers.lib → ""HandleErrors"" function",A fatal error occured,Une erreur fatale s'est produite
+MSG_HANDLES_ERR_FATAL_LINE,"Headers.lib → ""HandleErrors"" function",The fatal error in question occurred in the line,L’erreur fatale en question s'est produite à la ligne
+MSG_HANDLES_ERR_FATAL_STOP,"Headers.lib → ""HandleErrors"" function","Stopping the execution of $(DechoE ""$(basename ""$0"")"").","Arrêt de l’exécution du script $(DechoE ""$(basename ""$0"")"")."
+,,,
+MSG_HANDLES_ERR_ERROR,"Headers.lib → ""HandleErrors"" function",ERROR,ERREUR
+MSG_HANDLES_ERR_TYPE,"Headers.lib → ""HandleErrors"" function",An error occured,Une erreur s'est produite
+MSG_HANDLES_ERR_LINE,"Headers.lib → ""HandleErrors"" function",The error in question occurred in the line,L’erreur en question s'est produite à la ligne
+MSG_HANDLES_ERR_STOP_Q,"Headers.lib → ""HandleErrors"" function","Do you want to stop the execution of $(DechoE ""$(basename ""$0"")"") ?","Voulez-vous arrêter l’exécution du script $(DechoE ""$(basename ""$0"")"") ?"
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+MSG_PERMS_CHOWNREC,"Permissions.lib → ""ChownRec"" function","Recursive change of the ownership rights of the new folder $(DechoN ""$path/"") from $(DechoN ""$current_owner"") to $(DechoN ""$new_owner"")","Transfert récursif des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")"
+MSG_PERMS_CHOWNREC_SUCCESS,"Permissions.lib → ""ChownRec"" function","The rights of the $(DechoS ""$name"") folder have been successfully changed from $(DechoS ""$current_owner"") to $(DechoS ""$new_owner"")","Les droits de propriété du dossier $(DechoS ""$name"") ont été transférées de $(DechoS ""$current_owner"") à $(DechoS ""$new_owner"") avec succès"
+MSG_PERMS_CHOWNREC_FAIL,"Permissions.lib → ""ChownRec"" function","Unable to change the rights of the $(DechoE ""$path/"") folder","Impossible de transférer la propriété les droits du dossier $(DechoE ""$path/"") de $(DechoE ""$current_owner"") à $(DechoE ""$new_owner"")"
+MSG_PERMS_CHOWNREC_FAIL_ADVICE,"Permissions.lib → ""ChownRec"" function","Please use the following command to change ownership recursively,","Pour transférer récursivement la propriété du dossier $(DechoE ""$path/"") de manière récursive, utilisez la commande suivante"
+,,,
+MSG_PERMS_CHOWN_PROCESSING_DIR,"Permissions.lib → ""Chown"" function",,"Transfert des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
+MSG_PERMS_CHOWN_PROCESSING_FILE,"Permissions.lib → ""Chown"" function",,"Transfert des droits de propriété du fichier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
+MSG_PERMS_CHOWN_SUCCESS,"Permissions.lib → ""Chown"" function",,"Les droits du fichier $(DechoS ""$parent"") ont été changés avec succès."
+MSG_PERMS_CHOWN_FAIL,"Permissions.lib → ""Chown"" function",,"Impossible de changer les droits du fichier $(DechoE ""$path"")."
+MSG_PERMS_CHOWN_FAIL_ADVICE,"Permissions.lib → ""Chown"" function",,"Utilisez la commande suivante pour changer les droits de propriété du fichier $(DechoE ""$path"")."
