--- a/lib/lang/Lire le fichier CSV.txt
+++ b/lib/lang/Lire le fichier CSV.txt
@@ -2,16 +2,18 @@
 Trois premières colonnes :
     - La première contient les noms de chaque variable,
     - La deuxième n'est là que pour aider, pour savoir dans quel fichier la variable est présente, et dans quelle fonction,
-    - La troisième contient le type de message. Elle en contient trois : Error (message d'erreur), Newstep (message de changement de sous-étape) et Success (message de succès).
+    - La troisième contient le type de message. Elle en contient quatre : Error (message d'erreur), Newstep (message de changement de sous-étape),
+        None (affichage normal, pas de statut particulier) et Success (message de succès).
     
-Toutes les colonnes suivantes contiennent chacune le message à afficher, pour chaque nom de variable de la première colonne selon leur ligne. 
+Toutes les colonnes suivantes contiennent chacune le message à afficher, pour chaque nom de variable de la première colonne, selon leur ligne. 
 
 
 ## PROCÉDURE
 1) Parcourir la toute première ligne du fichier CSV jusqu'à trouver le nom de la colonne contenant la langue passée en argument. Obtenir son index.
 
 2) Tant que la première colonne (contenant les noms des variables) n'a pas été entièrement parcourue.
-    - Si le premier caractère est égal à un '/', alors le parseur passe à la ligne suivante en incrémenant l'index de la ligne de 1.
+    - Si le premier caractère est égal à un '/' (permet de garder un espace vide pour plus de lisibilité),
+        alors le parseur passe à la ligne suivante en incrémenant l'index de la ligne de 1.
 
     - Sinon, récupérer la valeur de la ligne en question (toujours dans la première colonne), l'écrire dans un fichier temporaire, puis écrire, sans espace, le signe '=".
         - Une fois ceci fait, en utilisant le même index de la ligne, obtenir la valeur de la ligne dans la troisième colonne, contenant le type de message à afficher.
@@ -19,14 +21,14 @@ Toutes les colonnes suivantes contiennent chacune le message à afficher, pour c
             - Si la valeur est égale à "Newstep" --> Écrire, dans le fichier, sans espace après le '=' --> "$(EchoNewstep "
             - Si la valeur est égale à "None" --> Écrire, dans le fichier, sans espace après le '=' --> "$(echo "
             - Si la valeur est égale à "Success" --> Écrire, dans le fichier, sans espace après le '=' --> "$(EchoSuccess "
-            - Sinon, afficher un message d'erreur et quitter le programme. Renvoyer un code d'erreur et, 
+            - Sinon, afficher un message d'erreur et quitter le programme. Renvoyer un code d'erreur. 
             
         - Une fois ceci fait, récupérer la valeur entregistrée sur la même ligne dans la colonne contenant le message selon la langue.
         - Désormais, il ne reste plus qu'à écrire --> ")" à la suite de la déclaration de variables dans le fichier temporaire, puis à incrémenter la valeur de la variable enregistrant le numéro de la ligne.
 
 
 ## GESTION D'ERREURS
-En cas d'erreur, la traiter en fonction du code de retour du programme dans le fichier Bash "SetLibLang.sh".
+En cas d'erreur, la traiter dans le fichier Bash "SetLibLang.sh", en fonction du code de retour du programme.
 
 Codes :
     - 1) Le nombre d'arguments passés ne correspond pas au nombre d'arguments attendu.
