--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -1,6 +1,6 @@
 VARIABLE,COMMENTS,MESSAGE, en, fr
 MSG_INITEND_END_OF_LIB_INIT,Bash-utils/src/Initializer.sh,None,"END OF THE LIBRARY INITIALIZATION PROCESS, PROCESSING $(Decho ""${PROJECT_NAME^^}"")'S PROJECT RESOURCES NOW","FIN DE L’INITIALISATION DE LA LIBRAIRIE, TRAITEMENT DU PROJET $(Decho ""${PROJECT_NAME^^}"")"
-MSG_INITEND_SOURCE_PROJECT_CONF_FAIL,Bash-utils/src/Initializer.sh,None,"In ${BASH_SOURCE[0]}, line $LINENO --> Error : unable to source the $PROJECT_NAME's file variables status configuration file.","Dans le fichier ${BASH_SOURCE[0]}, à la ligne $LINENO => Erreur : impossible de sourcer le fichier de configuration des variables de statut du projet $PROJECT_NAME"
+MSG_INITEND_SOURCE_PROJECT_CONF_FAIL,Bash-utils/src/Initializer.sh,None,"In ${BASH_SOURCE[0]}, line $LINENO --> Error : unable to source the $PROJECT_NAME's file variables status configuration file.","Dans le fichier ${BASH_SOURCE[0]}, à la ligne $LINENO => Erreur : impossible de sourcer le fichier de configuration des variables de statut du projet $PROJECT_NAME"
 MSG_INITEND_SOURCE_PROJECT_CONF_SUCCESS,Bash-utils/src/Initializer.sh,None,Successfully sourced the $PROJECT_NAME's file variables status configuration file.,
 /,/,,/,/
 MSG_DIR_PROCESSING_BEGIN,"Directories.lib ==> ""ProcessingDir"" function",Newstep,"Processing the $(DechoN ""$name"") folder in the parent folder $(DechoN ""$parent"").","Traitement du dossier $(DechoN ""$name"") dans le dossier parent $(DechoN ""$parent/"")."
@@ -21,9 +21,9 @@ MSG_FILE_PROCESSING_BEGIN,"Files.lib ==> ""ProcessingFile"" function",Newstep,"P
 MSG_FILE_PROCESSING_END_FAIL,"Files.lib ==> ""ProcessingFile"" function",Error,"End of processing the $(DechoE ""$name"") file","Fin de traitement du ficier $(DechoE ""$name"")"
 MSG_FILE_PROCESSING_END_SUCCESS,"Files.lib ==> ""ProcessingFile"" function",Success,"End of processing the $(DechoS ""$name"") file","Fin de traitement du fichier $(DechoS ""$name"")"
 /,/,,/,/
-MSG_FILE_OVRWRT_DETECTED,"Files.lib ==> ""OverwriteFile"" function",Newstep,"The file $(DechoN ""$path"") already exists and is not empty.","Le fichier $(DechoN ""$path"") existe déjà et n'est pas vide"
+MSG_FILE_OVRWRT_DETECTED,"Files.lib ==> ""OverwriteFile"" function",Newstep,"The $(DechoN ""$path"") file already exists and is not empty.","Le fichier $(DechoN ""$path"") existe déjà et n'est pas vide"
 MSG_FILE_OVRWRT_OVERWRITE,"Files.lib ==> ""OverwriteFile"" function",Newstep,"Overwriting data from file $(DechoN ""$path"")","Écrasement des données du fichier $(DechoN ""$path"")"
-MSG_FILE_OVRWRT_SUCCESS,"Files.lib ==> ""OverwriteFile"" function",Success,"The content of the file $(DechoS ""$path"") has been successfully overwritten","Le contenu du fichier $(DechoS ""$path"") a été écrasé avec succès"
+MSG_FILE_OVRWRT_SUCCESS,"Files.lib ==> ""OverwriteFile"" function",Success,"The content of the $(DechoS ""$path"") file has been successfully overwritten","Le contenu du fichier $(DechoS ""$path"") a été écrasé avec succès"
 MSG_FILE_OVRWRT_FAIL,"Files.lib ==> ""OverwriteFile"" function",Error,"The content of the $(DechoE ""$path"") file has not been overwritten","Le contenu du fichier $(DechoE ""$path"") n'a pas été écrasé"
 /,/,,/,/
 MSG_FILE_MKFILE_CREATE,"Files.lib ==> ""Makefile"" function",Newstep,"Creating the $(DechoN ""$name"") file in the parent folder $(DechoN ""$parent/"").","Création du fichier $(DechoN ""$name"") dans le dossier $(DechoN ""$parent/"")"
@@ -31,11 +31,15 @@ MSG_FILE_MKFILE_SUCCESS,"Files.lib ==> ""Makefile"" function",Success,"The $(Dec
 MSG_FILE_MKFILE_FAIL,"Files.lib ==> ""Makefile"" function",Error,"THE $(DechoE ""$name"") FILE CANNOT BE CREATED IN THE PARENT FOLDER $(DechoE ""$parent/"").","LE FICHIER $(DechoE ""$name"") N'A PAS PU ÊTRE CRÉÉ DANS LE DOSSIER $(DechoE ""$parent/"")"
 MSG_FILE_MKFILE_EMPTY,"Files.lib ==> ""Makefile"" function",Success,"The $(DechoS ""$path/"") file already exists in the $(DechoS ""$parent/"") folder and is empty.","Le fichier $(DechoS ""$name"") existe déjà dans le dossier $(DechoS ""$parent/"")"
 /,/,,/,/
-MSG_HANDLES_VARSTAT_DEBUG_FAIL,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_DEBUG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_DEBUG est incorrecte.
-MSG_HANDLES_VARSTAT_LOG_FAIL,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_LOG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG est incorrecte.
-MSG_HANDLES_VARSTAT_LOGREDIRECT_FAIL,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_LOG_REDIRECT variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG_REDIRECT est incorrecte.
-MSG_HANDLES_VARSTAT_TIMELINE_NAN,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_TIME_LINE variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TIME_LINE n’est pas un nombre.
-MSG_HANDLES_VARSTAT_TIMETXT_NAN,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_TIME_TXT variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TXT n’est pas un nombre.
+MSG_FILE_COMPRESS,,,,
+,,,,
+,,,,
+/,/,/,/,/
+MSG_HANDLES_VARSTAT_DEBUG_FAIL,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_DEBUG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_DEBUG est incorrecte.
+MSG_HANDLES_VARSTAT_LOG_FAIL,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_LOG variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG est incorrecte.
+MSG_HANDLES_VARSTAT_LOGREDIRECT_FAIL,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_LOG_REDIRECT variable's value is incorrect.,Erreur : la valeur de la variable PROJECT_STATUS_LOG_REDIRECT est incorrecte.
+MSG_HANDLES_VARSTAT_TIMELINE_NAN,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_TIME_LINE variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TIME_LINE n’est pas un nombre.
+MSG_HANDLES_VARSTAT_TIMETXT_NAN,"Handles.lib ==> ""CheckVarStatus"" function",Error,Error : PROJECT_STATUS_TIME_TXT variable's value is not a number.,Erreur : la valeur de la variable PROJECT_STATUS_TXT n’est pas un nombre.
 /,/,,/,/
 MSG_HANDLES_ROOTEUID_FAIL,"Handles.lib ==> ""CheckRootEUID"" function",Error,Error : you need root user's privileges to perform this action.,Erreur : vous avez besoin des privilèges du super-utilisateur pour effectuer cette action
 /,/,,/,/
@@ -43,17 +47,17 @@ MSG_HANDLES_LOG_PATH_FAIL,"Handles.lib ==> ""CheckProjectLogPath"" function",Err
 /,/,,/,/
 MSG_HANDLES_LOG_STATUS_FAIL_LOCATION,"Handles.lib ==> ""CheckProjectLogStatus"" function",,"In ${BASH_UTILS[0]}, line $(Decho ""$LINENO"") ==>","Dans le fichier ${BASH_SOURCE[0]}, à la ligne $LINENO ==>"
 MSG_HANDLES_LOG_STATUS,"Handles.lib ==> ""CheckProjectLogStatus"" function",,,
-MSG_HANDLES_LOG_STATUS_INVALID,"Handles.lib ==> ""CheckProjectLogStatus"" function",Error,Error : no valid write output mode defined in the PROJECT_STATUS_LOG variable,Erreur : aucun mode d’écriture défini dans la variable PROJECT_STATUS_LOG
+MSG_HANDLES_LOG_STATUS_INVALID,"Handles.lib ==> ""CheckProjectLogStatus"" function",Error,Error?: no valid write output mode defined in the PROJECT_STATUS_LOG variable,Erreur : aucun mode d’écriture défini dans la variable PROJECT_STATUS_LOG
 /,/,,/,/
 MSG_HANDLES_ERR_FATAL_ERROR,"Headers.lib ==> ""HandleErrors"" function",Error, FATAL ERROR,ERREUR FATALE
 MSG_HANDLES_ERR_FATAL_TYPE,"Headers.lib ==> ""HandleErrors"" function",Error,A fatal error occured,Une erreur fatale s'est produite
-MSG_HANDLES_ERR_FATAL_LINE,"Headers.lib ==> ""HandleErrors"" function",Error,The fatal error in question occurred in the line,L’erreur fatale en question s'est produite à la ligne
+MSG_HANDLES_ERR_FATAL_LINE,"Headers.lib ==> ""HandleErrors"" function",Error,The fatal error in question occurred in the line,L’erreur fatale en question s'est produite ? la ligne
 MSG_HANDLES_ERR_FATAL_STOP,"Headers.lib ==> ""HandleErrors"" function",Error,"Stopping the execution of $(DechoE ""$(basename ""$0"")"").","Arrêt de l’exécution du script $(DechoE ""$(basename ""$0"")"")."
 /,/,,/,/
 MSG_HANDLES_ERR_ERROR,"Headers.lib ==> ""HandleErrors"" function",Error,ERROR,ERREUR
 MSG_HANDLES_ERR_TYPE,"Headers.lib ==> ""HandleErrors"" function",Error,An error occured,Une erreur s'est produite
-MSG_HANDLES_ERR_LINE,"Headers.lib ==> ""HandleErrors"" function",Error,The error in question occurred in the line,L’erreur en question s'est produite à la ligne
-MSG_HANDLES_ERR_STOP_Q,"Headers.lib ==> ""HandleErrors"" function",Error,"Do you want to stop the execution of $(DechoE ""$(basename ""$0"")"") ?","Voulez-vous arrêter l’exécution du script $(DechoE ""$(basename ""$0"")"") ?"
+MSG_HANDLES_ERR_LINE,"Headers.lib ==> ""HandleErrors"" function",Error,The error in question occurred in the line,L’erreur en question s'est produite ? la ligne
+MSG_HANDLES_ERR_STOP_Q,"Headers.lib ==> ""HandleErrors"" function",Error,"Do you want to stop the execution of $(DechoE ""$(basename ""$0"")"") ?","Voulez-vous arrêter l’exécution du script $(DechoE ""$(basename ""$0"")"") ?"
 ,,,,
 ,,,,
 ,,,,
@@ -66,13 +70,14 @@ MSG_HANDLES_ERR_STOP_Q,"Headers.lib ==> ""HandleErrors"" function",Error,"Do you
 ,,,,
 ,,,,
 ,,,,
-MSG_PERMS_CHOWNREC,"Permissions.lib ==> ""ChownRec"" function",Newstep,"Recursive change of the ownership rights of the new folder $(DechoN ""$path/"") from $(DechoN ""$current_owner"") to $(DechoN ""$new_owner"")","Transfert récursif des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")"
-MSG_PERMS_CHOWNREC_SUCCESS,"Permissions.lib ==> ""ChownRec"" function",Success,"The rights of the $(DechoS ""$name"") folder have been successfully changed from $(DechoS ""$current_owner"") to $(DechoS ""$new_owner"")","Les droits de propriété du dossier $(DechoS ""$name"") ont été transférées de $(DechoS ""$current_owner"") à $(DechoS ""$new_owner"") avec succès"
-MSG_PERMS_CHOWNREC_FAIL,"Permissions.lib ==> ""ChownRec"" function",Error,"Unable to change the rights of the $(DechoE ""$path/"") folder","Impossible de transférer la propriété les droits du dossier $(DechoE ""$path/"") de $(DechoE ""$current_owner"") à $(DechoE ""$new_owner"")"
-MSG_PERMS_CHOWNREC_FAIL_ADVICE,"Permissions.lib ==> ""ChownRec"" function",Error,"Please use the following command to change ownership recursively,","Pour transférer récursivement la propriété du dossier $(DechoE ""$path/"") de manière récursive, utilisez la commande suivante"
+MSG_PERMS_CHOWNREC,"Permissions.lib ==> ""ChownRec"" function",Newstep,"Changing recursively the ownership rights of the  $(DechoN ""$path/"") folder from $(DechoN ""$current_owner"") to $(DechoN ""$new_owner"").","Transfert récursif des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
+MSG_PERMS_CHOWNREC_SUCCESS,"Permissions.lib ==> ""ChownRec"" function",Success,"The rights of the $(DechoS ""$path"") folder have been successfully changed from $(DechoS ""$current_owner"") to $(DechoS ""$new_owner"").","Les droits de propriété du dossier $(DechoS ""$path"") ont été transférées de $(DechoS ""$current_owner"") ? $(DechoS ""$new_owner"") avec succès."
+MSG_PERMS_CHOWNREC_FAIL,"Permissions.lib ==> ""ChownRec"" function",Error,"Unable to change récursively the rights of the $(DechoE ""$path/"") folder.","Impossible de transférer récursivement la propriété les droits du dossier $(DechoE ""$path/"") de $(DechoE ""$current_owner"") ? $(DechoE ""$new_owner"")."
 /,/,,/,/
-MSG_PERMS_CHOWN_PROCESSING_DIR,"Permissions.lib ==> ""Chown"" function",Newstep,,"Transfert des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
-MSG_PERMS_CHOWN_PROCESSING_FILE,"Permissions.lib ==> ""Chown"" function",Newstep,,"Transfert des droits de propriété du fichier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
-MSG_PERMS_CHOWN_SUCCESS,"Permissions.lib ==> ""Chown"" function",Success,,"Les droits du fichier $(DechoS ""$parent"") ont été changés avec succès."
-MSG_PERMS_CHOWN_FAIL,"Permissions.lib ==> ""Chown"" function",Error,,"Impossible de changer les droits du fichier $(DechoE ""$path"")."
-MSG_PERMS_CHOWN_FAIL_ADVICE,"Permissions.lib ==> ""Chown"" function",Error,,"Utilisez la commande suivante pour changer les droits de propriété du fichier $(DechoE ""$path"")."
+MSG_PERMS_CHOWN_PROCESSING_DIR,"Permissions.lib ==> ""Chown"" function",Newstep,"Changing the ownership rights of the  $(DechoN ""$path/"") folder from $(DechoN ""$current_owner"") to $(DechoN ""$new_owner"").","Transfert des droits de propriété du dossier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
+MSG_PERMS_CHOWN_SUCCESS_DIR,"Permissions.lib ==> ""Chown"" function",Success,"The rights of the $(DechoS ""$path"") folder have been successfully changed from $(DechoS ""$current_owner"") to $(DechoS ""$new_owner"")","Les droits du dossier $(DechoS ""$path"") ont été changés avec succès."
+MSG_PERMS_CHOWN_FAIL_DIR,"Permissions.lib ==> ""Chown"" function",Error,"Unable to change the rights of the $(DechoE ""$path/"") folder.","Impossible de changer les droits du dossier $(DechoE ""$path"")."
+/,/,/,/,/
+MSG_PERMS_CHOWN_PROCESSING_FILE,"Permissions.lib ==> ""Chown"" function",Newstep,"Changing the ownership rights of the  $(DechoN ""$path/"") file from $(DechoN ""$current_owner"") to $(DechoN ""$new_owner"").","Transfert des droits de propriété du fichier $(DechoN ""$path/"") de $(DechoN ""$current_owner"") en $(DechoN ""$new_owner"")."
+MSG_PERMS_CHOWN_SUCCESS_FILE,"Permissions.lib ==> ""Chown"" function",Success,"The rights of the $(DechoS ""$path"") file have been successfully changed from $(DechoS ""$current_owner"") to $(DechoS ""$new_owner"").","Les droits du fichier $(DechoS ""$path"") ont été changés avec succès."
+MSG_PERMS_CHOWN_FAIL_FILE,"Permissions.lib ==> ""Chown"" function",Error,"Unable to change the rights of the $(DechoE ""$path/"") file.","Impossible de changer les droits du fichier $(DechoE ""$path"")."
