Adding docs/Create_LaTeX_Document.sh file

--- a/docs/fr/Bash/functions/basis/CheckSTAT.tex
+++ b/docs/fr/Bash/functions/basis/CheckSTAT.tex
@@ -1,13 +1,15 @@
 \documentclass[a4paper,10pt]{article}
 
-\usepackage[utf8]{inputenc}     % Encodage du texte
-\usepackage[french]{babel}      % Langue
+\usepackage[utf8]{inputenc}     % Encodage du texte.
+\usepackage[french]{babel}      % Langue du document.
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}					%
-\usepackage[usenames,dvipsnames]{xcolor}	% Coloration de texte
-\usepackage{verbatim}						% Mise en page de paragraphes
+\usepackage[usenames,dvipsnames]{xcolor}	% Coloration de texte.
+\usepackage{verbatim}						% Mise en page de paragraphes.
 \usepackage{fancyhdr}						%
-\usepackage[document]{ragged2e}				% Justification du texte
+\usepackage[document]{ragged2e}								% Justification du texte.
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.
+\usepackage{hyperref}										% Table des matières cliquable.
 
 \fontfamily{}
 
@@ -35,6 +37,7 @@
 \maketitle
 \newpage
 
+\hypertarget{contents}{}
 \tableofcontents
 \newpage
 
