--- a/docs/fr/Bash/Introduction.tex
+++ b/docs/fr/Bash/Introduction.tex
@@ -1,12 +1,15 @@
 \documentclass[a4paper,10pt]{article}
 
-\usepackage[utf8]{inputenc}     % Encodage du texte
-\usepackage[french]{babel}      % Langue
+\usepackage[utf8]{inputenc}     % Encodage du texte.
+\usepackage[french]{babel}      % Langue du document.
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
 \usepackage[T1]{fontenc}					%
-\usepackage[usenames,dvipsnames]{xcolor}	% Coloration de texte
-\usepackage{verbatim}						% Mise en page de paragraphes
+\usepackage[usenames,dvipsnames]{xcolor}	% Coloration de texte.
+\usepackage{verbatim}						% Mise en page de paragraphes.
 \usepackage{fancyhdr}						%
+\usepackage[document]{ragged2e}								% Justification du texte.
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.					%
+\usepackage{hyperref}
 
 \fontfamily{}
 
@@ -34,6 +37,7 @@
 \maketitle
 \newpage
 
+\hypertarget{contents}{}
 \tableofcontents
 \newpage
 
@@ -52,13 +56,13 @@ Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le
 \subsection{Utilisation}\color{white}
 Pour utiliser cette librairie, il vous suffira de sourcer deux fichiers :
 \begin{itemize}
-    \item \color{orange}\textbf{\$HOME\color{lime}/.bash\_profile}\color{white} : Ce fichier à sourcer en tout premier lieu doit contenir les variables suivantes :
+    \item \color{orange}\textbf{\$HOME\color{lime}/.bash\_profile\color{white} :} \color{white} Ce fichier à sourcer en tout premier lieu doit contenir les variables suivantes :
     \begin{itemize}
-        \item \color{orange}\textbf{\$\_\_BASH\_UTILS\_ROOT}\color{white} : Contient le chemin vers le dossier racine de la librairie, appelé \color{lime}\textbf{Bash-utils}\color{white}.
-        \item \color{orange}\textbf{\$\_\_BASH\_UTILS}\color{white} : Contient le chemin vers le dossier du fichier d'initialisation, de préférence en appelant la variable précédente.\linebreak
+        \item \color{orange}\textbf{\$\_\_BASH\_UTILS\_ROOT\color{white} :} \color{white} Contient le chemin vers le dossier racine de la librairie, appelé \color{lime}\textbf{Bash-utils}\color{white}.
+        \item \color{orange}\textbf{\$\_\_BASH\_UTILS\color{white} :} \color{white} Contient le chemin vers le dossier du fichier d'initialisation, de préférence en appelant la variable précédente.\linebreak
     \end{itemize}
 
-    \item \color{lime}\textbf{Initializer.sh}\color{white} : Ce fichier est l'initialiseur de la librairie Bash Utils. Il doit être sourcé en deuxième lieu.
+    \item \color{lime}\textbf{Initializer.sh\color{white} :} \color{white} Ce fichier est l'initialiseur de la librairie Bash Utils. Il doit être sourcé en deuxième lieu.
 
 \end{itemize}
 	Pour en savoir plus sur les instructions concernant le fichier \color{lime}\textbf{.bash\_profile}\color{white}, veuillez consulter la sous-section \textbf{Configurations} plus bas.
@@ -91,33 +95,33 @@ Ce dossier est le plus important de tous, car il contient tous les fichiers sour
 
 Il contient trois sous-dossiers :
 \begin{itemize}
-    \item \color{lime}\textbf{functions}\color{white} : ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.
-    \item \color{lime}\textbf{lang}\color{white} : ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
-    \item \color{lime}\textbf{variables}\color{white} : ce sous-dossier contient tous les fichiers enregistrant des variables.
+    \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.
+    \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
+    \item \color{lime}\textbf{variables\color{white} :} \color{white} ce sous-dossier contient tous les fichiers enregistrant des variables.
 \end{itemize}
 
 Description des sous-dossiers du dossier \textbf{functions}
 \setcounter{secnumdepth}{4}
-\paragraph{Fonctions}
+\paragraph{Fonctions}\mbox{}\\
 Chaque fichier contient des fonctions qui sont propres au nom du fichier. Par exemple, le fichier "Files.lib" ne contient que des fonctions de traitement de fichiers.
 
 Les trois sous-dossiers du dossier \textbf{functions} ont été créés pour différencier les différentes catégories de fichiers de fonctions (dans le dossier \textbf{functions}) :
 \begin{itemize}
-    \item \color{lime}\textbf{basis}\color{white} : les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).
+    \item \color{lime}\textbf{basis\color{white} :} \color{white} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).
     
-    \item \color{lime}\textbf{main}\color{white} : les fonctions standard (traitement de fichiers, de dossiers, de permissions, gestion du temps, etc...)
+    \item \color{lime}\textbf{main\color{white} :} \color{white} les fonctions standard (traitement de fichiers, de dossiers, de permissions, gestion du temps, etc...).\\[1\baselineskip]
 
-    Ces fonctions dépendent des fonctions contenues dans les fichiers du dossier "basis".
+    Ces fonctions dépendent des fonctions contenues dans les fichiers du dossier "basis".\\[1\baselineskip]
 
-    \item \color{lime}\textbf{os\_specific}\color{white} : les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)
+    \item \color{lime}\textbf{os\_specific\color{white} :} \color{white} les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)
 \end{itemize}
 
-\paragraph{lang}
-Rappel : fonctionnalité future, certaines idées peuvent encore changer.
+\paragraph{lang}\mbox{}\\
+Rappel : fonctionnalité future, certaines idées peuvent encore changer.\\[1\baselineskip]
 
-Le fichier \color{lime}\textbf{lang.csv}\color{white} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.
+Le fichier \color{lime}\textbf{lang.csv} \color{white} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.
 
-\paragraph{variables}
+\paragraph{variables}\mbox{}\\
 Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \color{lime}\textbf{colors.var}\color{white} sont des variables définissant le code de la couleur d'un texte à afficher.
 
 \color{blue}
@@ -155,7 +159,7 @@ En quatrième lieu, le script source tous les fichiers de fonctions et de variab
 
 En cinquième lieu, le script :
 \begin{itemize}
-    \item Crée une variable nommée \color{orange}\textbf{\$\_\_PROJECT\_PATH}\color{white}, enregistrant le chemin du fichier de script principal par le biais de la fonction \color{mauve}\textbf{GetParentDirectoryPath}\color{white} du fichier \color{lime}\textbf{functions/main/Directories.lib}\color{white}.
+    \item Crée une variable nommée \color{orange}\textbf{\$\_\_PROJECT\_PATH}\color{white}, enregistrant le chemin du fichier de script principal par le biais de la fonction \color{mauve}\textbf{GetParentDirectoryPath} \color{white} du fichier \color{lime}\textbf{functions/main/Directories.lib}\color{white}.
     
     \item Modifie plusieurs variables de statut pour rendre la partie d'initialisation invisible à l'utilisateur final.
     
@@ -168,21 +172,18 @@ En cinquième lieu, le script :
 
 \color{green}
 \subsection{Fonctions}\color{white}
-Tous les fichiers de documentation concernant la description des fonctions se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/functions}\color{white}.
+Tous les fichiers de documentation en français concernant la description des fonctions se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/functions}\color{white}.
 
 \color{green}
 \subsection{Variables}\color{white}
-Tous les fichiers de documentation concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.
+Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.
 
 \color{red}
 \section{Installation de Bash Utils}\color{white}
 
 \color{green}
 \subsection{Configurations}\color{white}
-
-\begin{verbatim}
 Pour utiliser les fonctionnalités de la librairie depuis n'importe quel chemin sans avoir à réécrire le chemin du fichier d'initialisation dans une myriade de fichiers éparpillés sur le disque dur, il est fortement recommandé de créer un fichier (s'il n'existe pas encore) nommé \color{lime}\textbf{.bash\_profile}\color{white} dans votre dossier personnel, ainsi que dans le dossier personnel du super-utilisateur (dans le dossier \color{lime}\textbf{/root}\color{white}) pour tout script lancé avec les privilèges du super-utilisateur.
-\end{verbatim}
 
 \color{green}
 \subsection{Installation}\color{white}
